feat: enable logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ flecs_ecs_sys = { git = "https://github.com/Indra-db/Flecs-Rust", rev = "4f9a222
   "flecs_pipeline",
   "flecs_system",
   "flecs_rest",
+  "flecs_log",
 ] }
